--- a/medilock/frontend/public/index.html
+++ b/medilock/frontend/public/index.html
@@ -20,6 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <p id="code"></p>
   </head>
   <body>
     <noscript>
